[project]
name = "travel-planner"
version = "0.1.0"
description = "travel planner"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "travel-agent",
    "travel-mcp",
    "travel-shared",
]

[tool.uv]
package = false

[tool.uv.sources]
travel-agent = { workspace = true }
travel-mcp = { workspace = true }
travel-shared = { workspace = true }   

[tool.uv.workspace]
members = [
    "packages/travel_agent",
    "packages/travel_mcp",
    "packages/travel_shared",
]
